--- a/Hammered/Base.lproj/Main.storyboard
+++ b/Hammered/Base.lproj/Main.storyboard
@@ -84,9 +84,6 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="ko1-dv-VHK"/>
-                    <connections>
-                        <outlet property="mybutton1" destination="dvk-jd-Nd0" id="L2T-O3-GXA"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -248,6 +245,23 @@
                     <view key="view" contentMode="scaleToFill" id="xeX-x9-6Tn">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zuQ-xx-hpm">
+                                <rect key="frame" x="0.0" y="51" width="393" height="749"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screenshot 2023-11-01 at 10.53.24" translatesAutoresizingMaskIntoConstraints="NO" id="GuJ-CN-QZx">
+                                        <rect key="frame" x="0.0" y="347" width="370" height="297"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screenshot 2023-10-30 at 09.47.39" translatesAutoresizingMaskIntoConstraints="NO" id="YJu-Lp-UN6">
+                                        <rect key="frame" x="-41" y="0.0" width="434" height="389"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="SnC-B6-W5u"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -255,10 +269,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TjQ-KT-HzJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1261" y="-1081"/>
+            <point key="canvasLocation" x="1260.3053435114502" y="-1082.3943661971832"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Screenshot 2023-10-30 at 09.47.39" width="922" height="1036"/>
+        <image name="Screenshot 2023-11-01 at 10.53.24" width="956" height="580"/>
         <image name="download" width="275" height="183"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
